kube-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-service
spec:
  replicas: 2
  selector:
    matchLabels:
      otus.app/name: demo-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        otus.app/name: demo-service
    spec:
      containers:
        - name: demo-serivce
          image: auwerk/demo-service:v1.0.4
          ports:
            - name: web
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: web
            initialDelaySeconds: 15
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: web
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /actuator/health/readiness
              port: web
            failureThreshold: 30
            periodSeconds: 10
