kube-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    otus.app/name: demo-service 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
