kube-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 80
          - path: /otusapp/(.*)/*
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 80
