kube-manifests/ingress_health.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-service-health-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 80
          - path: /otusapp/(.*)/*
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 80
