kube-manifests/ingress_user.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-service-user-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /user/(.*)/*
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 80
